# rslack-command

./: .gitignore  Cargo.toml  README.md  make.bat  makefile
src/: application.rs  application_error.rs  configuration.rs  functions.rs  main.rs  slack.rs
src/application/: core.rs  mod.rs
src/configuration/: mod.rs  settings.rs
src/services/: mod.rs  slack.rs
src/util/: functions.rs  mod.rs
