[package]
name = "rslack-command"
version = "0.1.0"
authors = ["Irisawa Masaru <irisawa.masaru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "*"
reqwest = { version = "*", features = ["blocking", "multipart"] }
serde_json = "*"
serde_derive = "*"
serde = "*"
toml = "*"
chrono = "*"
